--- a/assets/css/login.css
+++ b/assets/css/login.css
@@ -4,7 +4,7 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
-    background: url(./assets/images/login_bg.jpg);
+    background: url(/assets/images/login_bg.jpg);
 }
 #img {
     margin: 50px;
